2002-05-14  Ryan Nunn  <triforce@merlin.net.au>
	* cheat.*, gamerend.cc, objs/objs.h : Fixing Namespace, and forcing int
	  to bool problems.
	* gumps/Face_stats.cc : Fixed old problem with stat bars not being
	  clamped if a stat was larger than the max.

2002-05-13  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: In rewriting with the 'combine' flag, I also changed
	all uses of drop() with add(), since drop() can potentially delete
	the object being added.

	* objs/contain.cc,etc:  ::add() takes a new parameter, 'combine',
	which means it should try to combine quantity items.  Also,
	replaced 'int' flags with 'bool'.

	* animat.cc,etc:  Simon Quinn's SFX patches applied.

	* schedule.cc:  Added Follow_avatar_schedule, and moved some of
	the party logic here.
	* actors.cc:  Moved some logic out, to schedule.cc.

2002-05-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/studio.cc: catch usecode debugging messages
	* shapes/shapeinf.cc: memory leak
	
2002-05-11  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucinternal.cc: After executing Usecode, tell barge to
	refigure what's on it.

2002-05-10  Jeff Freedman  <jeff@amy.nerble.net>

	* objs.h,etc:  Added Terrain_game_object class for a bit of cleanup.

2002-05-09  Jeff Freedman  <jeff@amy.nerble.net>

	* data/bg/defaultkeys.txt,keyactions.cc,keys.cc:  Ctrl-arrow and
	page keys move the selected objects.
	* cheat.cc: move_selected() moves all the selected objects.

	* cheat.cc (Cheat): Maintain list of selected objects.
	* keys.cc,defaultkeys.txt,etc:  DEL key deletes selected objects.
	* exult.cc:  Select dropped object/combo.
	* gamewin.cc:  In 'select' mode, clicking an object toggles
	whether it's selected.
	* gamerend.cc:  Show selected objects.

2002-05-09  Ryan Nunn  <triforce@merlin.net.au>
	* files/Table.cc : Namespace
	* exult.cc, windrag.*, xdrag.h, shapes/u7drag.*, mapedit/*.* :
	  Modifications to Win32 DnD. Combo's now work. Also shape and combo